--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<script src="js/lib/three.min.js"></script>
 		<script src="js/lib/OrbitControls.js"></script>
-
+		<!-- 
 		<script src="js/lib/EffectComposer.js"></script>
 		<script src="js/lib/RenderPass.js"></script>
 		<script src="js/lib/MaskPass.js"></script>
@@ -14,7 +14,7 @@
 		<script src="js/lib/CopyShader.js"></script>
 		<script src="js/lib/SSAOShader.js"></script>
 		<script src="js/lib/FXAAShader.js"></script>
-		<!-- <script src="js/lib/FilmShader.js"></script>
+		<script src="js/lib/FilmShader.js"></script>
 		<script src="js/lib/FocusShader.js"></script>
 		<script src="js/lib/DOFMipMapShader.js"></script> -->
 
@@ -36,13 +36,19 @@
 				<div class="row-fluid">
 					<div class="col-md-8" >
 						<div class="project">
+							<div class="thumbTitle">
+									explore.js
+							</div>
 							<div class="summary">
-								<img class="thumb" src="assets/thumbs/explore.png">
+								<img class="thumb" src="assets/thumbs/explore.png">						
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 					<div class="project">
+							<div class="thumbTitle">
+									Motion Graphics
+							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/mograph.png">
 							</div>
@@ -53,6 +59,9 @@
 				<div class="row-fluid">
 					<div class="col-md-4" >
 						<div class="project">
+							<div class="thumbTitle">
+									Gladiator Exhibit
+							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/Ramphs.jpg">
 							</div>
@@ -60,6 +69,9 @@
 					</div>
 					<div class="col-md-8">
 					<div class="project">
+							<div class="thumbTitle">
+									Kessler Syndrome
+							</div>
 							<div class="summary">
 								<img class="thumb" src="assets/thumbs/Kessler.png">
 							</div>
@@ -70,6 +82,9 @@
 				<div class="row-fluid">
 					<div class="col-md-6" >
 						<div class="project">
+							<div class="thumbTitle">
+									Explorer
+							</div>
 							<div class="summary">
 								<img class="thumb" src="assets/thumbs/Logo.jpg">
 							</div>
@@ -77,6 +92,9 @@
 					</div>
 					<div class="col-md-6">
 						<div class="project">
+							<div class="thumbTitle">
+									Writing on the Wall
+							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/WOTW.png">
 								
@@ -142,11 +160,9 @@
 					</div>
 				</div> -->
 				</div>
-			</div>
-		
-		
-		<script src="js/shaders/fragment.js"></script>
-		<script src="js/shaders/vertex.js"></script>
+			</div>		
+<!-- 		<script src="js/shaders/fragment.js"></script>
+		<script src="js/shaders/vertex.js"></script> -->
 		<script src="js/script.js"></script>
 	</body>
 </html>
