--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="js/lib/jquery-3.1.1.min.js"></script>
 		<script src="js/lib/CSSPlugin.min.js"></script>
 		<script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
+		<script type="text/javascript" src="js/lib/ScrollToPlugin.min.js"></script>
 		<title>Will J. Field Portfolio</title>
 	</head>
 	<body>
@@ -41,7 +42,10 @@
 									explore.js
 							</div>
 							<div class="summary">
-								<img class="thumb" src="assets/thumbs/explore.png">						
+								<img class="thumb" src="assets/thumbs/explore.png">
+							<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</div>						
 							</div>
 						</div>
 					</div>
@@ -52,6 +56,9 @@
 							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/mograph.png">
+								<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</div>
 							</div>
 						</div>
 					</div>
@@ -65,6 +72,9 @@
 							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/Ramphs.jpg">
+								<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -75,6 +85,9 @@
 							</div>
 							<div class="summary">
 								<img class="thumb" src="assets/thumbs/Kessler.png">
+								<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -88,6 +101,9 @@
 							</div>
 							<div class="summary">
 								<img class="thumb" src="assets/thumbs/Logo.jpg">
+								<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -98,7 +114,9 @@
 							</div>
 							<div class="summary">
 								<img class="thumb vertical" src="assets/thumbs/WOTW.png">
-								
+								<div class=popUp>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</div>
 							</div>
 						</div>
 					</div>
