updates to functionality

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
+
 		<script src="js/lib/three.min.js"></script>
 		<script src="js/lib/OrbitControls.js"></script>
 		<!-- 
@@ -41,10 +42,10 @@
 							<div class="thumbTitle">
 									explore.js
 							</div>
-							<div class="summary">
+							<div class="newsummary">
 								<img class="thumb" src="assets/thumbs/explore.png">
 							<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								In 2016, I completed the Master’s program at the Interactive Telecommunications Program (ITP) at NYU. My thesis, explore.js, is an open-source toolkit that helps designers, artists, teachers, and amateur astronomers visualize the cosmos. It is composed of a JavaScript library that consolidates various astronomy tools, a texture pack, and scripts to help manage API requests on the back-end.
 							</div>						
 							</div>
 						</div>
@@ -54,10 +55,10 @@
 							<div class="thumbTitle">
 									Motion Graphics
 							</div>
-							<div class="summary">
-								<img class="thumb vertical" src="assets/thumbs/mograph.png">
+							<div class="newsummary">
+									<img class="thumb vertical" src="assets/thumbs/mograph.png">
 								<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<iframe src="https://player.vimeo.com/video/34644443" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 							</div>
 							</div>
 						</div>
@@ -68,12 +69,21 @@
 					<div class="col-md-4 projectTile" >
 						<div class="project">
 							<div class="thumbTitle">
-									Gladiator Exhibit
+									Center Stage
 							</div>
-							<div class="summary">
+							<div class="newsummary">
 								<img class="thumb vertical" src="assets/thumbs/Ramphs.jpg">
 								<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<iframe src="https://player.vimeo.com/video/127007402" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+								Center Stage is a museum exhibition designed and executed by myself, Dalit Shalom and Hugo Lucena for the Playful Communication for Serious Research course at ITP, Spring 2015. We worked with historian and archeologist Sebastian Heath to communicate the research he does on Roman gladiators and amphitheaters.
+
+								Our group collaboratively designed the concept and style package for the exhibit. We then split up tasks to execute at which point I took on the development and implementation of the exhibit’s interactive component.
+
+								The interactive component consists of a touch screen application in which the visitor follows a gladiator throughout their career as they gain status and fight in progressively larger arenas.
+
+								Each fight is triggered by the app and plays out as a projection into a physical model of an amphitheater.
+
+
 								</div>
 							</div>
 						</div>
@@ -83,10 +93,12 @@
 							<div class="thumbTitle">
 									Kessler Syndrome
 							</div>
-							<div class="summary">
+							<div class="newsummary">
 								<img class="thumb" src="assets/thumbs/Kessler.png">
 								<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								I started Space Trash as a class project for Networked Media at the Interactive Telecommunications program at NYU. Space Trash tracks man-made debris in orbit around the Earth in real time by pulling in TLE data from the space-track.org API. The Earth is textured with a custom WebGL shader I wrote to display both night and day sides with a layer of moving clouds.
+
+								At the 2015 NASA Space Apps challenge, I joined up with partners to upgrade the app to have it predict and display potential debris collisions and visualize the data in 3D space. This version of the project was posted on Chrome experiments in July 2015. I worked on the Three.js visualization while my team cleaned up the back end process.
 								</div>
 							</div>
 						</div>
@@ -99,10 +111,15 @@
 							<div class="thumbTitle">
 									Explorer
 							</div>
-							<div class="summary">
+							<div class="newsummary">
 								<img class="thumb" src="assets/thumbs/Logo.jpg">
 								<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<iframe src="https://player.vimeo.com/video/113425196" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+								Explorer is a space simulator built entirely in Processing. It is designed to be an educational tool that teaches about orbital mechanics. The user of the simulator controls a space ship orbiting one of four planetary bodies in our Solar System – the Moon, Mercury, Earth and Neptune.
+
+								The simulator has two modes: free play and tutorial. Free play allows the user to direct the ship as desired and for any planet to be chosen at any time. Tutorial mode guides the user through several steps explaining how to get into orbit and how to change the shape of the orbit.
+
+								My partner, Minju Kim helped me build an Arduino powered controller to control the ship and camera. The project is designed as a prototype for a interactive museum didactic. It is targeted to ages 10+ but is enjoyable for all ages.
 								</div>
 							</div>
 						</div>
@@ -112,10 +129,11 @@
 							<div class="thumbTitle">
 									Writing on the Wall
 							</div>
-							<div class="summary">
+							<div class="newsummary">
 								<img class="thumb vertical" src="assets/thumbs/WOTW.png">
 								<div class=popUp>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<iframe src="https://player.vimeo.com/video/42266778" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+								Writing On The Wall is a music video that I independently produced and animated for The Jean Marie
 								</div>
 							</div>
 						</div>
